[project]
name = "parallel-multi-agent-news-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]

